throtl vip logo not showing on WINDOWS: fixed

--- a/banner.css
+++ b/banner.css
@@ -71,7 +71,7 @@
 /****** Right(or Bottom: mobile) Section ******/
 .content-container {
     background: linear-gradient( rgba(62,48,44,0.5), rgba(62,48,44,0.5) ), 
-                url("./Images/Tire-Thread.png");
+                url("./Images/tire-thread.png");
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -132,17 +132,13 @@
         margin: 0 auto;
         display: inline-block;
         width: 850px;
-        border-top-left-radius: 50px;
         overflow: hidden;
+        border-top-left-radius: 50px;
     }
 }
-@media (min-width: 1280px) and (max-width: 1440px) {
+@media (max-width: 1440px) {
     /******** Left(or Top: mobile) Section ********/
     .title-container {
-        /* border-radius: 50px; */
-        /* border: 50px; */
-        border-bottom-left-radius: 50px;
-        border-bottom-right-radius: 50px;
         border-top-right-radius: 50px;
         clip-path: polygon(0 0, 100% 0, 100% 60%, 0% 100%);
         border-top-left-radius: 15px;
@@ -152,12 +148,8 @@
     }
     .title-inner {
         display: inline-block;
-        /* height: 100%; */
-        /* letter-spacing: 1px; */
-        /* line-height: 2em; */
         width: 100%;
         font-size: 2.3em;
-        /* font-style: italic; */
     }
     .title {
         transform: translateY(-30px);
@@ -179,9 +171,6 @@
         background-color: black;
         color: white;
         margin-top: 20px;
-        /* border: none; */
-        /* border-radius: 3px; */
-        /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
     }
     /**********************************************/
     
